--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         
       </div>
 
-      <div class="col-md-3 col-sm-6 service"> <i class="fa fa-registered"></i>
+      <div class="col-md-3 col-sm-6 service"> <i class="fa fa-github-square"></i>
         <h4>Introduccion a R</h4>
         <p>
           <a href="https://github.com/grupo-gien/Intro-a-R">grupo-gien/Intro-a-R</a>
