--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand" href="index.html">Inicio</a> </div>
+      <a class="navbar-brand" href="index.html">Inicio </a> </div>
     
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -81,7 +81,7 @@
 <div id="about-section">
   <div class="container">
     <div class="section-title">
-      <h2>Sobre Nosotros</h2>
+      <h2>ANÁLISIS DE DATOS ECOLÓGICOS Y AMBIENTALES</h2>
       <hr>
     </div>
     <div class="space"></div>
