--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
         <div class="row">
           <div class="col-md-4">
             <h4>Resumen</h4>
-            <p>Se presenta a continuación, los insumos requeridos para el análisis de datos ambientales y ecológicos mediante códigos del entorno R, abordando diferentes aspectos de la bioestadística y el análisis multivariado. Esta información es el resultado de un proyecto soportado por el grupo de investigación GIEN, orientado a la generación de un espacio web en el que se puedan efectuar procedimientos para el análisis de datos ecológicos y ambientales. </p>
+            <p>Este espacio web, se encuentra relacionado al proyecto “Herramienta para el análisis de datos biológicos y ambientales en el programa R”, soportado por el Grupo de Investigación en Ecología Neotropical - GIEN y avalado por la Universidad del Magdalena, orientado a la generación de un espacio web en el que se puedan efectuar procedimientos para el análisis de datos ecológicos y ambientales, mediante códigos del entorno R, abordando diferentes aspectos de la bioestadística y el análisis multivariado.  </p>
           </div>
           <div class="col-md-4">
             <h4>Presentacion</h4>
-            <p>El análisis de datos en herramientas de distribución gratuita ha sido una tendencia en las últimas décadas, dada las facilidades que ofrece a usuarios, en especial para países en vía de desarrollo. Es por ello, que a continuación se ofrecen herramientas de entorno web y un repositorio de comandos orientados al análisis de datos ecológicos y ambientales, iniciando con la exploración de patrones gráficos, siguiendo con las transformaciones y estandarizaciones y finalizando con diferentes técnicas multivariadas y el análisis de diversidad taxonómica. Esta información será complementado por un texto que contextualiza a las diferentes temáticas.</p>
+            <p>El análisis de datos en herramientas de distribución gratuita ha sido una tendencia en las últimas décadas, dada las facilidades que ofrece a usuarios, en especial para países en vía de desarrollo, como es el caso de Colombia. Es por ello, que a continuación se ofrecen herramientas de entorno web y un repositorio de comandos orientados al análisis de datos ecológicos y ambientales, iniciando con la exploración de patrones gráficos, siguiendo con las transformaciones y estandarizaciones y finalizando con diferentes técnicas multivariadas y el análisis de diversidad taxonómica. Esta información será complementada por un texto guía que contextualiza a las diferentes temáticas tratadas.</p>
           </div>
           
         </div>
@@ -112,6 +112,8 @@
               
               <div class="col"> <p> Plataformas – <a href="https://colab.research.google.com/notebooks/intro.ipynb#scrollTo=KxEMH7Xf1J_G">Google Colab</a>  y <a href="https://rstudio.cloud/projects">RStudio Cloud</a> </p></div>
               <div class="col"> <p> Guias – <a href="https://github.com/grupo-gien/Manual-Google-Colab">Google Colab</a>  y <a href="https://github.com/grupo-gien/Intro-a-R">RStudio Cloud</a> </p></div>
+              <div class="col"><p>1. Introducción - <a href="https://github.com/grupo-gien/1.-Introduccion">.pdf</a> </p></div>
+              <div class="col"><p>2. Intro a R y RStudio - <a href="https://github.com/grupo-gien/2.-Intro-a-R-y-RStudio">.pdf</a> </p></div>
               <div class="col"><p>Transformaciones y estandarizaciones</p></div>
               <div class="col"><p>Exploración – Figuras multivariadas (<a href="https://drive.google.com/drive/folders/1Tl64VjwCebALgswyTxJ85QTnRBYHcG3E?usp=sharing">Ejecutable, <a href="https://github.com/grupo-gien/Exploratorios-en-R">Archivos</a> </a>)</p></div>
               <div class="col"><p>Ordenación – PCA y nMDS</p></div>
