--- a/index.html
+++ b/index.html
@@ -114,15 +114,12 @@
               <div class="col"> <p> Guias – <a href="https://github.com/grupo-gien/Manual-Google-Colab">Google Colab</a>  y <a href="https://github.com/grupo-gien/Intro-a-R">RStudio Cloud</a> </p></div>
               <div class="col"><p>1. Introducción - <a href="https://github.com/grupo-gien/1.-Introduccion">.pdf</a> </p></div>
               <div class="col"><p>2. Intro a R y RStudio - <a href="https://github.com/grupo-gien/2.-Intro-a-R-y-RStudio">.pdf</a> </p></div>
-              <div class="col"><p>Transformaciones y estandarizaciones</p></div>
+              <div class="col"><p>3. Algebra Lineal - <a href="https://github.com/grupo-gien/3.-Algebra-Lineal">.pdf</a> </p></div>
+              <div class="col"><p>4. Exploración gráfica - <a href="https://github.com/grupo-gien/4.-Exploraci-n-gr-fica">.pdf</a> </p></div>
+              <div class="col"><p>5. Transformaciones y Estandarizaciones - <a href="https://github.com/grupo-gien/5.-Transformaciones-y-Estandarizaciones">.pdf</a> </p></div>
+              
               <div class="col"><p>Exploración – Figuras multivariadas (<a href="https://drive.google.com/drive/folders/1Tl64VjwCebALgswyTxJ85QTnRBYHcG3E?usp=sharing">Ejecutable, <a href="https://github.com/grupo-gien/Exploratorios-en-R">Archivos</a> </a>)</p></div>
-              <div class="col"><p>Ordenación – PCA y nMDS</p></div>
-              <div class="col"><p>Ordenación – Correspondencias</p></div>
-              <div class="col"><p>Ordenación – RDA y CCA</p></div>
-              <div class="col"><p>Clasificación – Clúster</p> </div>
-              <div class="col"><p>Hipótesis – T2 Hotelling y Manova, Manovas permutacionales</p> </div>
-              <div class="col"><p>Hipótesis – Manovas permutacionales</p> </div>
-              <div class="col"><p>Análisis de Diversidad</p></div>
+              
 
             </div>
           </div>
