--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <div class="col"><p>1. Introducción - <a href="https://github.com/grupo-gien/1.-Introduccion">.pdf</a> </p></div>
               <div class="col"><p>2. Intro a R y RStudio - <a href="https://github.com/grupo-gien/2.-Intro-a-R-y-RStudio">.pdf</a> </p></div>
               <div class="col"><p>3. Algebra Lineal - <a href="https://github.com/grupo-gien/3.-Algebra-Lineal">.pdf</a> </p></div>
-              <div class="col"><p>4. Exploración gráfica - <a href="https://github.com/grupo-gien/4.-Exploraci-n-gr-fica">.pdf</a> </p></div>
+              <div class="col"><p>4. Exploración gráfica - ( <a href="https://github.com/grupo-gien/4.-Exploraci-n-gr-fica">.pdf</a> , <a href="https://drive.google.com/drive/folders/11OqwNQzk6t6kNbza5yAE5PGtCiRBAB0S?usp=sharing">Ejecutable</a>) </p></div>
               <div class="col"><p>5. Transformaciones y Estandarizaciones - <a href="https://github.com/grupo-gien/5.-Transformaciones-y-Estandarizaciones">.pdf</a> </p></div>
               
               <div class="col"><p>Exploración – Figuras multivariadas (<a href="https://drive.google.com/drive/folders/1Tl64VjwCebALgswyTxJ85QTnRBYHcG3E?usp=sharing">Ejecutable, <a href="https://github.com/grupo-gien/Exploratorios-en-R">Archivos</a> </a>)</p></div>
