--- a/panel.html
+++ b/panel.html
@@ -56,13 +56,13 @@
       <div class="position-sticky pt-3">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
+            <a class="nav-link active" aria-current="page" href="panel.html">
               <span data-feather="home"></span>
               Principal
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="Estadisticas.html">
               <span data-feather="bar-chart-2"></span>
               Estadisticas
             </a>
