--- a/login.html
+++ b/login.html
@@ -83,8 +83,13 @@
 
             <div class="input-field">
               <i class="fas fa-school"></i>
-              <input type="text" placeholder="Docente, estudiante, otro" />
-            </div>         
+              <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                <option selected>Rol</option>
+                <option value="1">Estudiante</option>
+                <option value="2">Docente</option>
+                <option value="3">Otro</option>
+              </select>
+            </div>       
 
             <input type="submit" class="btn" value="Crear cuenta" />
 
