--- a/Andea-completo.html
+++ b/Andea-completo.html
@@ -60,6 +60,7 @@
             <li><a href="#works-section" class="page-scroll">Imagenes</a></li>
             <li><a href="#team-section" class="page-scroll">Participantes</a></li>
             <li><a href="#contact-section" class="page-scroll">contacto</a></li>
+            <li><a href="#contact-s class="page-scroll">contacto</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse --> 
@@ -315,31 +316,7 @@
           <div class="space"></div>
           <p><i class="fa fa-phone"></i>+57 300000000</p>
         </div>
-        <div class="col-md-8">
-          <h4>Enviar un mensaje</h4>
-          <form name="sentMessage" id="contactForm" novalidate>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input type="text" id="name" class="form-control" placeholder="Nombre" required="required">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input type="email" id="email" class="form-control" placeholder="Email" required="required">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <textarea name="message" id="message" class="form-control" rows="4" placeholder="Mensaje" required></textarea>
-              <p class="help-block text-danger"></p>
-            </div>
-            <div id="success"></div>
-            <button type="submit" class="btn btn-default">Enviar</button>
-          </form>
-        </div>
+        
       </div>
     </div>
     <div id="social-section">
