--- a/Andea-completo.html
+++ b/Andea-completo.html
@@ -60,7 +60,8 @@
             <li><a href="#works-section" class="page-scroll">Imagenes</a></li>
             <li><a href="#team-section" class="page-scroll">Participantes</a></li>
             <li><a href="#contact-section" class="page-scroll">contacto</a></li>
-            <li><a href="#contact-s class="page-scroll">contacto</a></li>
+            <li><a href="#contact-section" class="page-scroll">contacto</a></li>
+            <li><a href="#">Cerrar Sesion</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse --> 
